kubernetes/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-sfs
spec:
  selector:
    matchLabels:
      app: postgres # has to match .spec.template.metadata.labels
  serviceName: "postgresql-svc"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: postgres # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgresql-db
          image: postgres:12.2
          ports:
            - containerPort: 5432
              name: postgresql-port
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          # lifecycle:
          #   postStart:
          #     exec:
          #       command: ["/bin/sh", "-c", "npm run initdb" ]
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-primary
  labels:
    app: postgres
    role: primary
spec:
  ports:
    - port: 5432
      name: postgresql-port
  # clusterIP: None
  selector:
    app: postgres
    # role: primary
    # statefulset.kubernetes.io/pod-name: postgresql-sfs-0
